# vitac

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
audio/: instructions.json
benchmarks/terminal-bench/: EXPERIMENT_LOG.md  clean_docker.sh  harbor_lpt.py  opencode_agent.py  run_opencode.sh  run_terminus.sh  task_runtimes.json  task_weights.json
benchmarks/vitac/: AGENTS.md  README.md
results/control-noop/: results.json
results/easy-2agent/: results.json
results/easy-noop/: results.json
results/final-medium-2agent/: results.json
results/final-medium-noop/: results.json
results/medium-2agent/: results.json
results/medium-noop/: results.json
results/noop-run/: results.json
results/qwen35-9b/: results.json
results/qwen35-9b-rerun/: results.json
results/qwen35-flash/: results.json
results/qwen35-flash-rerun/: results.json
results/run_20260328_160929/: results.json
results/test-noop-single/: results.json
results/two-agent-run/: results.json
results/verify-control/: results.json
results/verify-easy-2agent/: results.json
results/verify-easy-noop/: results.json
results/verify-medium/: results.json
scripts/: update-opencode.sh
tasks/ambiguous-file-cleanup/: Dockerfile  docker-compose.yaml  solution.sh  task.yaml
tasks/append-to-hosts/: docker-compose.yaml  solution.sh
tasks/compress-selected-files/: Dockerfile  docker-compose.yaml  task.yaml
ts-runner/: docker-compose.collaborator.yaml  package.json  run-trial.ts  tsconfig.json  types.ts
viewer/: server.py
vitac/: __init__.py  cli.py  evaluator.py  types.py
(+480 files in other folders)
